--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,7 @@ stages:
 
         - script: |
             echo 📦 Installing dependencies...
-            npm ci
+            npm install
           displayName: 'npm install'
           workingDirectory: $(workingDirectory)
 
